# seleniumfw

./: .gitignore  LICENSE  README.md  behave.ini  catalog-info.yml  main.py  pyproject.toml  requirements.txt  setup.py
core/: __init__.py  browser_factory.py  config.py  listener_manager.py  report_generator.py  report_listener.py  runner.py  utils.py
seleniumfw/: __init__.py  api_client.py  api_server.py  browser_factory.py  config.py  exception.py  listener_manager.py  loader.py  report_generator.py  report_listener.py  runner.py  thread_context.py  utils.py
settings/: browser.properties
sfw/: cli.py
sfw/templates/jinja/features/: feature.feature.j2
sfw/templates/jinja/listeners/: listener.py.j2
sfw/templates/jinja/testcases/: testcase.py.j2
sfw/templates/jinja/testsuite_collections/: testsuite_collection.yml.j2
sfw/templates/jinja/testsuites/: testsuite.yml.j2
sfw/templates/project/: .gitignore  Dockerfile  requirements.txt
tests/cases/: test_login.py
tests/cases/login/: login_negative.py  login_positive.py
tests/data/: users.csv
tests/include/: environment.py
tests/include/features/: login.feature
tests/include/steps/: steps.py
tests/keywords/: browser_helpers.py
tests/listeners/: debug_logger.py
tests/objects/: login_page.py
tests/suites/: login_suite.yml
